Upgrade Guava and drop Java 7 support